2006-04-05  Mark D. Baushke  <mdb@gnu.org>

	* logmsg.c (logfile_write): Add missing "T" to format_cmdline to
	avoid "Unknown format character in info file ('T')." error.
	* sanity.sh (info-setup-newfmt-1, info-newfmt-6): Add a test to
	exercise it.

2006-03-31  Mark D. Baushke  <mdb@gnu.org>

	* cvsrc.c (read_cvsrc): Deal with \r\n (DOS) line endings in
	.cvsrc files.

2006-03-28  Derek Price  <derek@ximbiot.com>

	[patch #4992]
	* buffer.c (fd_buffer): Store new connection timeout parameter.
	(fd_buffer_initialize): Handle and set new connection timeout
	parameter.
	(fd_buffer_input, fd_buffer_output): Time out connections when
	requested.
	* buffer.h (fd_buffer_initialize): Update proto.
	* client.c, log-buffer.c, server.c: Update all callers.
	* server.c (server): Handle time out return from input/output.
	* command_line_opt.h: New header file.
	* main.c (main): Handle --timeout global option.
	* sanity.sh (server-23): New test.

2006-03-24  Derek Price  <derek@ximbiot.com>

	* sanity.sh (recase): Correct spelling typo in comment.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in: Regenerated.

2006-03-07  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Search the Attic when -F is used.
	* sanity.sh (tests): Run death-rtag.
	(death-rtag): Expect success.

	* sanity.sh (death-rtag): Add failing force tag move test.

2006-03-06  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Always search in the attic when -r is used.

	* sanity.sh (death-rtag): New test.
	(Original report from C. Michael Pilato <cmpilato@collab.net>.)

2006-03-10  Derek Price  <derek@ximbiot.com>

	* rcs.c (rcsbuf_cache_open): Extend FIXME.

2006-03-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set MALLOC_CHECK_ in hopes of exposing common memory
	errors when CVS is linked with glibc 2.x.

	* sanity.sh (rdiff, env, diffmerge1): Remove unnecessary cd command.

2006-02-28  Derek Price  <derek@ximbiot.com>
