@@ -31447,9 +31447,12 @@ EOF
 
 	    # Test the server timeout feature.  If this fails, this test may
 	    # block indefinitely.
-	    dotest server-23 "$testcvs --timeout 5 server" \
+	    dotest server-23 "$testcvs --timeout 5s server" \
 "E Fatal server error, aborting\.
 error ETIMEOUT Connection timed out\."
+	    dotest_fail server-24 "$testcvs --timeout 5X server" \
+"$CPROG server: unknown units (\`X') in argument to --timeout
+$CPROG \[server aborted\]: (valid units are: none, \`d', \`h', \`m', & \`s')"
 
 	    dokeep
 	    rm -rf $TESTDIR/crerepos
